--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,24 @@
+/* сначала цвета */
+
+.header, .feynmann {
+  background-color: #f2f2f2;
+}
+.kaufman, .footer {
+  background-color: #1f1f1f;
+}
+
+.header__link,
+.two-columns__brief,
+.feynman__link {
+  color: #2f80ed;
+}
+
+/* далее текстовые элементы */
+
+/* ссылки */
+
+/* контейнеры */
+
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -9,17 +30,72 @@
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
+/* reusable */
+
+.logo {
+  min-width: 183px;
+  min-height: 32px;
+  background-repeat: no-repeat;
+}
+
+/* тело по порядку */
+
+/* шапка */ 
+
 .header {
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
-  /* выше установили ограничения для секции */
+  display: flex;
+  position: relative;
+  z-index: 0;
+  overflow: hidden;
+}
+
+.logo_place_header {
+  background-image: url('../images/logo_place_header.svg');
+  position: absolute;
+  top: 30px;
+  left: 64px;
+}
+
+.header__title {
+  height: fit-content;
+  width: 730px;
+  line-height: 96px;
+  font-size: 102px;
+  align-self: center;
+  margin-left: 64px;
+  /* font-weight: bold; */
+}
+
+.header__subtitle {
+  position: absolute;
+  width: 388px;
+  bottom: 30px;
+  left: 64px;
+  line-height: 25px;
+  font-size: 18px;
+}
+
+.header__main-illustration {
+  width: 765px;
+  height: 608px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: -1;
 }
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
   height: 568px;
   width: 568px;
+  background-color: #2f80ed;
+  position: absolute;
+  right: 0;
+  top: 64px;
+  z-index: -2;
 }
 
 /* и элемента с модификатором вида ключ-значение */
@@ -29,3 +105,8 @@
   margin-right: 0;
   margin-top: 80px;
 }
+
+
+
+
+
