--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,18 @@
-/* сначала цвета */
+/* (!!) — means I (probly) need to fulfill some commons, reusables etc. to be beautiful */
+/* (!) — stands for 'improve this' */
+
+/* reset (!!)*/
+
+.header__title,
+.two-columns__brief, .two-columns__paragraph,
+.section-title, .section-subtitle,
+.feynman__title, .feynman__subtitle {
+  margin: 0;
+  padding: 0;
+}
+/* теперь в макете будут только те отступы, которые мы сами добавим */
+
+/* colorway */
 
 .header, .feynmann {
   background-color: #f2f2f2;
@@ -13,24 +27,83 @@
   color: #2f80ed;
 }
 
-/* далее текстовые элементы */
+/* line-height */
 
-/* ссылки */
+.header__subtitle, .footer__author {
+  line-height: 25px;
+}
 
-/* контейнеры */
+.two-columns__brief, .table__text {
+  line-height: 1.2;
+}
+
+.two-columns__main-text, .section-subtitle {
+  line-height: 34px;
+}
+
+.section-title, .table__heading, .feynman__title {
+  line-height: 1.15;
+}
+
+.feynman__subtitle, .feynman__link {
+  line-height: 51px;
+}
+
+.footer__column-heading, .footer__column-link {
+  line-height: 30px;
+}
+
+/* font-size */
+
+.header__subtitle, .two-columns__brief, .table__text, .footer__author, .footer__column-heading, .footer__column-link {
+  font-size: 18px;
+}
+
+.two-columns__main-text, .section-subtitle, .table__heading {
+  font-size: 24px;
+}
+
+.section-title {
+  font-size: 60px;
+}
+
+.feynman__subtitle, .feynman__link {
+  font-size: 36px;
+}
+
+/* links */
+
+.header__link,
+.feynman__link,
+.footer__column-link {
+  text-decoration: none;
+}
+
+/* такая группировка чаще может быть излишней, ведь она не так длинна но вниз код таки удлинняет, причём x4-x10
+однако здесь будет удобно видно псевдоклассы и псевдоэлементы */
+
+.header__link:hover,
+.feynman__link:hover,
+.footer__column-link:hover {
+  text-decoration: underline;
+}
+
+.header__link::after,
+.feynman__link::after {
+  content: ' \2192';
+}
+
+
+/* container styles */
 
 .page {
   min-width: 1100px;
-  /* мы ещё не умеем делать мобильную версию сайта, */
-  /* поэтому выше установлена минимальная ширина страницы */
   max-width: 1600px;
-  /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
-  /* выше для экранов больше 1600px отцентрировали весь контент */
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
-/* reusable */
+/* reusable (!!) */
 
 .logo {
   min-width: 183px;
@@ -38,9 +111,8 @@
   background-repeat: no-repeat;
 }
 
-/* тело по порядку */
-
-/* шапка */ 
+/* body */
+/* header */ 
 
 .header {
   height: 100vh;
@@ -74,8 +146,6 @@
   width: 388px;
   bottom: 30px;
   left: 64px;
-  line-height: 25px;
-  font-size: 18px;
 }
 
 .header__main-illustration {
@@ -87,7 +157,6 @@
   z-index: -1;
 }
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
   height: 568px;
   width: 568px;
@@ -98,15 +167,125 @@
   z-index: -2;
 }
 
-/* и элемента с модификатором вида ключ-значение */
-.table__cell_theme_dark {
+/* main */
+/* description */
+
+.description {
+  display: flex;
+  justify-content: center;
+}
+
+.two-columns {
+  width: 80%;
+  min-width: 784px;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 100px;
+  margin-bottom: 0;
+}
+
+.two-columns__brief {
+  width: 175px;
+  display: flex;
+  flex-direction: column;
+  font-weight: normal;
+  
+}
+
+.two-columns__main-text {
+  width: 80%;
+  min-width: 784px;
+  display: flex;
+  flex-direction: column;
+}
+
+.two-columns__paragraph {
+  margin-bottom: 30px;
+  
+}
+
+.two-columns__span-accent {
+  font-weight: bold;
+}
+
+.two-columns__paragraph:last-of-type {
+  margin-bottom: 0;
+}
+
+/* sections common flex (!!)*/
+
+.description, .digits {
+  display: flex;
+  justify-content: center;
+}
+
+/* digits */
+
+.digits {
+  padding: 100px 0;
+  flex-direction: column;
+  align-items: center;
+}
+
+.table {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  width: 1100px;
+  justify-content: space-between;
+  list-style-type: none;
+}
+
+.table__cell {
+  width: 250px;
+  margin-top: 60px;
+
+}
+
+/* feynman */
+
+.feynman {
+  min-height: 790px;
+  padding-top: 100px;
+  position: relative;
+  z-index: 0;
+}
+
+.feynman__title, .feynman__subtitle {
+  margin: 0 auto;
+  text-align: center;
+}
+
+.feynman__title {
+  width: 648px;
+  font-size: 120px;
+}
+
+.feynman__subtitle {
+  margin-top: 70px;
+}
+
+.feynman__link {
+  position: absolute;
+  top: 50%;
+  right: 48px;
+}
+
+.feynman__main-illustration {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: -1
+}
+
+/* .table__cell_theme_dark {
   width: 200px;
   color: white;
   margin-right: 0;
   margin-top: 80px;
+} */
+
+.logo_place_footer {
+  background-image: url('../images/logo_place_footer.svg');
 }
-
-
-
-
-
