--- a/styles/style.css
+++ b/styles/style.css
@@ -3,10 +3,12 @@
 
 /* reset (!!)*/
 
-.header__title,
+.header__title, .header__subtitle,
 .two-columns__brief, .two-columns__paragraph,
 .section-title, .section-subtitle,
-.feynman__title, .feynman__subtitle {
+.table__heading, .table__text,
+.feynman__title, .feynman__subtitle,
+.footer__author, .footer__column-heading, .footer__column-links {
   margin: 0;
   padding: 0;
 }
@@ -14,9 +16,10 @@
 
 /* colorway */
 
-.header, .feynmann {
+.header, .feynman {
   background-color: #f2f2f2;
 }
+
 .kaufman, .footer {
   background-color: #1f1f1f;
 }
@@ -25,6 +28,10 @@
 .two-columns__brief,
 .feynman__link {
   color: #2f80ed;
+}
+
+.section-title_theme_dark, .section-subtitle_theme_dark, .table__cell_theme_dark {
+  color: white;
 }
 
 /* line-height */
@@ -75,6 +82,7 @@
 
 .header__link,
 .feynman__link,
+.footer__author,
 .footer__column-link {
   text-decoration: none;
 }
@@ -84,6 +92,7 @@
 
 .header__link:hover,
 .feynman__link:hover,
+.footer__author:hover,
 .footer__column-link:hover {
   text-decoration: underline;
 }
@@ -92,7 +101,32 @@
 .feynman__link::after {
   content: ' \2192';
 }
+/* (!) интереснее доблять стрелку при наведении без андерлайна, минимализм приветствую */
 
+/* reusable (!!) */
+
+.logo {
+  min-width: 183px;
+  min-height: 32px;
+  background-repeat: no-repeat;
+}
+
+.section-title, .section-subtitle {
+  width: 60%;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.section-title, .table__heading, .table__text {
+  margin-bottom: 20px;
+}
+
+/* sections common flex (!!)*/
+
+.description, .digits, .kaufman, .footer {
+  display: flex;
+  justify-content: center;
+}
 
 /* container styles */
 
@@ -101,14 +135,6 @@
   max-width: 1600px;
   margin: 0 auto;
   font-family: 'Helvetica Neue', Arial, sans-serif;
-}
-
-/* reusable (!!) */
-
-.logo {
-  min-width: 183px;
-  min-height: 32px;
-  background-repeat: no-repeat;
 }
 
 /* body */
@@ -170,11 +196,6 @@
 /* main */
 /* description */
 
-.description {
-  display: flex;
-  justify-content: center;
-}
-
 .two-columns {
   width: 80%;
   min-width: 784px;
@@ -210,13 +231,6 @@
 
 .two-columns__paragraph:last-of-type {
   margin-bottom: 0;
-}
-
-/* sections common flex (!!)*/
-
-.description, .digits {
-  display: flex;
-  justify-content: center;
 }
 
 /* digits */
@@ -276,16 +290,101 @@
   position: absolute;
   bottom: 0;
   left: 0;
-  z-index: -1
+  z-index: -1;;
 }
 
-/* .table__cell_theme_dark {
+/* kaufman */
+
+.kaufman {
+  padding: 90px 0;
+  position: relative;
+  flex-direction: column;
+  align-items: center;
+  z-index: 0;
+  overflow: hidden;
+}
+
+.table__cell_theme_dark {
   width: 200px;
-  color: white;
   margin-right: 0;
   margin-top: 80px;
-} */
+}
+
+.kaufman__triangle {
+  width: 877px;
+  height: 877px;
+  position: absolute;
+  top: 0;
+  right: -210px;
+  z-index: -1;
+  overflow: hidden;
+  background-image: url('../images/kaufman-triangle.svg');
+}
+
+/* footer */
+
+.footer {
+  min-height: 350px;
+}
+
+.footer__columns {
+  width: 90%;
+  margin-top: 60px;
+  margin-bottom: 40px;
+  display: flex;
+  justify-content: space-between;
+  color: white; 
+}
+
+.footer__column_content_copyright {
+  flex-basis: 711px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+}
 
 .logo_place_footer {
+  height: 35px;
   background-image: url('../images/logo_place_footer.svg');
+}
+
+.footer__author {
+  color: white;
+  margin: 18px 0;
+}
+
+.footer__column-heading {
+  margin-bottom: 20px;
+}
+
+.footer__column-links {
+  margin-bottom: 16px;
+  list-style: none;
+}
+
+.footer__column-link {
+  color: white;
+  display: flex;
+  align-items: center;
+}
+
+.footer__social-icon {
+  width: 16px;
+  height: 16px;
+  margin-right: 10px;
+  background-repeat: no-repeat;
+  display: inline-block;
+}
+
+.footer__social-icon_of_vk {
+  background-image: url('../images/vk_color_white.svg');
+}
+
+.footer__social-icon_of_inst {
+  background-image: url('../images/instagram_color_white.svg');
+}
+
+.footer__social-icon_of_fb {
+  background-image: url('../images/facebook_color_white.svg');
 }
