--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,12 @@
 /* (!!) — means I (probly) need to fulfill some commons, reusables etc. to be beautiful */
 /* (!) — stands for 'improve this' */
 
-/* reset (!!)*/
+/* some written in english 'cause i want to use only one language as we're all understand it's way too comfortable */
+/* by now русский язык использую как пояснения, однако структурно гораздо понятнее и лаконичнее строится мысль на наиболее юзабельном языке
+так что я продолжу использовать английский как naming-tool для описания, так как он препятствует неточностям
+и надеюсь получить здесь фидбэк если так делать не надо/не принято */
+
+/* reset */
 
 .header__title, .header__subtitle,
 .two-columns__brief, .two-columns__paragraph,
@@ -94,13 +99,16 @@
   text-decoration: underline;
 }
 
+.header__link:hover::before {
+  content: none;
+}
+
 .header__link::after,
 .feynman__link::after {
   content: ' \2192';
 }
-/* (!) интереснее доблять стрелку при наведении без андерлайна, минимализм приветствую */
 
-/* reusable (!!) */
+/* reusable */
 
 .logo {
   min-width: 183px;
@@ -118,7 +126,23 @@
   margin-bottom: 20px;
 }
 
-/* sections common flex (!!)*/
+.table {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  width: 1100px;
+  justify-content: space-between;
+  list-style-type: none;
+}
+
+.table__cell {
+  width: 250px;
+  margin-top: 60px;
+
+}
+
+/* sections common flex */
 
 .description, .digits, .kaufman, .footer {
   display: flex;
@@ -161,7 +185,7 @@
   font-size: 102px;
   align-self: center;
   margin-left: 64px;
-  /* font-weight: bold; */
+  font-weight: bold;
 }
 
 .header__subtitle {
@@ -238,22 +262,6 @@
   align-items: center;
 }
 
-.table {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  flex-wrap: wrap;
-  width: 1100px;
-  justify-content: space-between;
-  list-style-type: none;
-}
-
-.table__cell {
-  width: 250px;
-  margin-top: 60px;
-
-}
-
 /* feynman */
 
 .feynman {
@@ -281,6 +289,7 @@
   position: absolute;
   top: 50%;
   right: 48px;
+
 }
 
 .feynman__main-illustration {
