--- a/styles/style.css
+++ b/styles/style.css
@@ -173,7 +173,7 @@
 
 .header__title {
   height: fit-content;
-  width: 730px;
+  max-width: 730px;
   line-height: 96px;
   font-size: 102px;
   align-self: center;
@@ -262,6 +262,7 @@
   padding-top: 100px;
   position: relative;
   z-index: 0;
+  box-sizing: border-box;
 }
 
 .feynman__title, .feynman__subtitle {
