--- a/blocks/section-title/section-title.css
+++ b/blocks/section-title/section-title.css
@@ -1,10 +1,8 @@
 .section-title {
-  margin: 0;
+  margin: 0 auto 20px;
   padding: 0;
   line-height: 1.15;
   font-size: 60px;
   width: 60%;
-  margin: 0 auto;
   text-align: center;
-  margin-bottom: 20px;
 }
