--- a/blocks/breathe/breathe.css
+++ b/blocks/breathe/breathe.css
@@ -1,4 +1,4 @@
-.header__link, .feynman__link, .khan__buy-link, .resources__link, .footer__column-link, .footer__author {
+/* .header__link, .feynman__link, .khan__buy-link, .resources__link, .footer__column-link, .footer__author {
   text-decoration: none;
   opacity: .5;
   transition: opacity 1s ease;
@@ -7,4 +7,14 @@
 .header__link:hover, .feynman__link:hover, .khan__buy-link:hover,
 .resources__link:hover, .footer__column-link:hover, .footer__author:hover {
   opacity: .9;
+} */
+
+.breathe {
+  text-decoration: none;
+  opacity: .5;
+  transition: opacity 1s ease;
+}
+
+.breathe:hover {
+  opacity: .95;
 }
