--- a/blocks/video/__iframes/video__iframes.css
+++ b/blocks/video/__iframes/video__iframes.css
@@ -1,7 +1,4 @@
 .video__iframes {
-  width: fit-content;
-  height: fit-content;
-  margin: auto;
-  margin-top: 60px;
-  margin-bottom: -50px;
+  margin: 50px auto -50px;
+  display: flex;
 }
