--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,7 @@
 @import url('../vendor/normalize.css');
 
+@import url('../blocks/page/page.css');
+
 @import url('../blocks/logo/logo.css');
 @import url('../blocks/logo/_place/logo_place_header.css');
 @import url('../blocks/logo/_place/logo_place_footer.css');
@@ -91,11 +93,3 @@
 @import url('../blocks/breathe/breathe.css');
 
 @import url('../blocks/rotation/rotation.css');
-
-.page {
-  min-width: 1100px;
-  max-width: 1600px;
-  margin: 0 auto;
-  font-family: 'Helvetica Neue', Arial, sans-serif;
-}
-
